# orange-sherbert

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini
src/: db.sqlite3  manage.py
src/example/: models.py  settings.py  urls.py  views.py
src/example/migrations/: 0001_initial.py  0002_book_checked_out_book_isbn_book_price_book_pub_date.py  0003_alter_book_options_book_ordered_from_and_more.py  0004_bookrequest.py  0005_alter_bookrequest_options_and_more.py  0006_requestcomment_delete_actionitem.py  0007_book_location.py
src/orange_sherbert/: __init__.py  apps.py  defaults.py  view.py  widgets.py
src/orange_sherbert/templates/orange_sherbert/: _formset_row.html  _formsets.html  base.html  create.html  delete.html  detail.html  list.html  update.html
src/orange_sherbert/templates/orange_sherbert/includes/: form.html  formset.html
src/orange_sherbert/templatetags/: sherbert_tags.py
src/test/: tests.py
