[project]
name = "orange-sherbert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.0",
    "django-htmx>=1.27.0",
    "django-template-partials>=25.3",
    "playwright>=1.56.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.9.0",
]
